Kolejka utworów odpala kolejne i poprzednie utwory! Jeszcze się nie odświeża po wybraniu nowego albumu. Do poprawy to i z robienie osobnej zakładki do widoku kolejki granych utworów.

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,10 @@
     <meta charset="utf-8" />
     <title>TracksAbout</title>
   </head>
+  <style>
+    html, body, #root { height: 100%; }
+  </style>
   <body>
-    <div id="root"></div>
+    <div id="root" style="height: 100%"></div>
   </body>
 </html>
