--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     html, body, #root { height: 100%; }
   </style>
   <body>
-    <div id="root" style="height: 100%"></div>
+    <div id="root"></div>
   </body>
 </html>
